--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
@@ -157,7 +157,7 @@
             <td id="hour-136" class="coverageHour" onClick="coverageClick(136)">.</td>
             <td id="hour-137" class="coverageHour" onClick="coverageClick(137)">.</td>
             <td id="hour-138" class="coverageHour" onClick="coverageClick(138)">.</td>
-            <td id="hour-139" class="coverageHour lowPriority" onClick="coverageClick(139)">.</td>
+            <td id="hour-139" class="coverageHour" onClick="coverageClick(139)">.</td>
             <td id="hour-140" class="coverageHour lowPriority" onClick="coverageClick(140)">.</td>
             <td id="hour-141" class="coverageHour lowPriority" onClick="coverageClick(141)">.</td>
             <td id="hour-142" class="coverageHour lowPriority" onClick="coverageClick(142)">.</td>
