--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
@@ -203,7 +203,7 @@
             <td id="hour-68-2" class="coverageHour" onClick="coverageClick(68)">.</td>
             <td id="hour-92-2" class="coverageHour lowPriority" onClick="coverageClick(92)">.</td>
             <td id="hour-116-2" class="coverageHour" onClick="coverageClick(116)">.</td>
-            <td id="hour-140-2" class="coverageHour lowPriority" onClick="coverageClick(140)">.</td>
+            <td id="hour-140-2" class="coverageHour" onClick="coverageClick(140)">.</td>
             <td id="hour-164-2" class="coverageHour lowPriority" onClick="coverageClick(164)">.</td>
             <td id="hour-20-2" class="coverageHour lowPriority" onClick="coverageClick(20)">.</td>
         </tr>
