tue evening removed

--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
@@ -76,10 +76,10 @@
             <td id="hour-64" class="coverageHour" onClick="coverageClick(64)">.</td>
             <td id="hour-65" class="coverageHour" onClick="coverageClick(65)">.</td>
             <td id="hour-66" class="coverageHour" onClick="coverageClick(66)">.</td>
-            <td id="hour-67" class="coverageHour" onClick="coverageClick(67)">.</td>
-            <td id="hour-68" class="coverageHour" onClick="coverageClick(68)">.</td>
-            <td id="hour-69" class="coverageHour" onClick="coverageClick(69)">.</td>
-            <td id="hour-70" class="coverageHour" onClick="coverageClick(70)">.</td>
+            <td id="hour-67" class="coverageHour lowPriority" onClick="coverageClick(67)">.</td>
+            <td id="hour-68" class="coverageHour lowPriority" onClick="coverageClick(68)">.</td>
+            <td id="hour-69" class="coverageHour lowPriority" onClick="coverageClick(69)">.</td>
+            <td id="hour-70" class="coverageHour lowPriority" onClick="coverageClick(70)">.</td>
             <td id="hour-71" class="coverageHour lowPriority" onClick="coverageClick(71)">.</td>
         </tr>
         <tr>
