--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
@@ -191,7 +191,7 @@
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">19</td>
             <td id="hour-43-2" class="coverageHour" onClick="coverageClick(43)">.</td>
-            <td id="hour-67-2" class="coverageHour" onClick="coverageClick(67)">.</td>
+            <td id="hour-67-2" class="coverageHour lowPriority" onClick="coverageClick(67)">.</td>
             <td id="hour-91-2" class="coverageHour lowPriority" onClick="coverageClick(91)">.</td>
             <td id="hour-115-2" class="coverageHour" onClick="coverageClick(115)">.</td>
             <td id="hour-139-2" class="coverageHour lowPriority" onClick="coverageClick(139)">.</td>
@@ -200,7 +200,7 @@
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">20</td>
             <td id="hour-44-2" class="coverageHour" onClick="coverageClick(44)">.</td>
-            <td id="hour-68-2" class="coverageHour" onClick="coverageClick(68)">.</td>
+            <td id="hour-68-2" class="coverageHour lowPriority" onClick="coverageClick(68)">.</td>
             <td id="hour-92-2" class="coverageHour lowPriority" onClick="coverageClick(92)">.</td>
             <td id="hour-116-2" class="coverageHour" onClick="coverageClick(116)">.</td>
             <td id="hour-140-2" class="coverageHour" onClick="coverageClick(140)">.</td>
@@ -209,7 +209,7 @@
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">21</td>
             <td id="hour-45-2" class="coverageHour" onClick="coverageClick(45)">.</td>
-            <td id="hour-69-2" class="coverageHour" onClick="coverageClick(69)">.</td>
+            <td id="hour-69-2" class="coverageHour lowPriority" onClick="coverageClick(69)">.</td>
             <td id="hour-93-2" class="coverageHour lowPriority" onClick="coverageClick(93)">.</td>
             <td id="hour-117-2" class="coverageHour" onClick="coverageClick(117)">.</td>
             <td id="hour-141-2" class="coverageHour lowPriority" onClick="coverageClick(141)">.</td>
@@ -218,7 +218,7 @@
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">22</td>
             <td id="hour-46-2" class="coverageHour lowPriority" onClick="coverageClick(46)">.</td>
-            <td id="hour-70-2" class="coverageHour" onClick="coverageClick(70)">.</td>
+            <td id="hour-70-2" class="coverageHour lowPriority" onClick="coverageClick(70)">.</td>
             <td id="hour-94-2" class="coverageHour lowPriority" onClick="coverageClick(94)">.</td>
             <td id="hour-118-2" class="coverageHour" onClick="coverageClick(118)">.</td>
             <td id="hour-142-2" class="coverageHour lowPriority" onClick="coverageClick(142)">.</td>
