extend coverage +-1 hours

--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
@@ -73,13 +73,13 @@
             <td id="hour-5-2" class="coverageHour lowPriority" onClick="coverageClick(5)">.</td>
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">6</td>
-            <td id="hour-30-2" class="coverageHour lowPriority" onClick="coverageClick(30)">.</td>
-            <td id="hour-54-2" class="coverageHour lowPriority" onClick="coverageClick(54)">.</td>
-            <td id="hour-78-2" class="coverageHour lowPriority" onClick="coverageClick(78)">.</td>
-            <td id="hour-102-2" class="coverageHour lowPriority" onClick="coverageClick(102)">.</td>
+            <td id="hour-30-2" class="coverageHour" onClick="coverageClick(30)">.</td>
+            <td id="hour-54-2" class="coverageHour" onClick="coverageClick(54)">.</td>
+            <td id="hour-78-2" class="coverageHour" onClick="coverageClick(78)">.</td>
+            <td id="hour-102-2" class="coverageHour" onClick="coverageClick(102)">.</td>
             <td id="hour-126-2" class="coverageHour" onClick="coverageClick(126)">.</td>
-            <td id="hour-150-2" class="coverageHour lowPriority" onClick="coverageClick(150)">.</td>
-            <td id="hour-6-2" class="coverageHour lowPriority" onClick="coverageClick(6)">.</td>
+            <td id="hour-150-2" class="coverageHour" onClick="coverageClick(150)">.</td>
+            <td id="hour-6-2" class="coverageHour" onClick="coverageClick(6)">.</td>
         </tr>
         <tr><td class="coverageHour">7</td>
             <td id="hour-31-2" class="coverageHour" onClick="coverageClick(31)">.</td>
@@ -191,11 +191,11 @@
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">19</td>
             <td id="hour-43-2" class="coverageHour" onClick="coverageClick(43)">.</td>
-            <td id="hour-67-2" class="coverageHour lowPriority" onClick="coverageClick(67)">.</td>
-            <td id="hour-91-2" class="coverageHour lowPriority" onClick="coverageClick(91)">.</td>
+            <td id="hour-67-2" class="coverageHour" onClick="coverageClick(67)">.</td>
+            <td id="hour-91-2" class="coverageHour" onClick="coverageClick(91)">.</td>
             <td id="hour-115-2" class="coverageHour" onClick="coverageClick(115)">.</td>
-            <td id="hour-139-2" class="coverageHour lowPriority" onClick="coverageClick(139)">.</td>
-            <td id="hour-163-2" class="coverageHour lowPriority" onClick="coverageClick(163)">.</td>
+            <td id="hour-139-2" class="coverageHour" onClick="coverageClick(139)">.</td>
+            <td id="hour-163-2" class="coverageHour" onClick="coverageClick(163)">.</td>
             <td id="hour-19-2" class="coverageHour" onClick="coverageClick(19)">.</td>
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">20</td>
@@ -205,7 +205,7 @@
             <td id="hour-116-2" class="coverageHour" onClick="coverageClick(116)">.</td>
             <td id="hour-140-2" class="coverageHour lowPriority" onClick="coverageClick(140)">.</td>
             <td id="hour-164-2" class="coverageHour lowPriority" onClick="coverageClick(164)">.</td>
-            <td id="hour-20-2" class="coverageHour lowPriority" onClick="coverageClick(20)">.</td>
+            <td id="hour-20-2" class="coverageHour" onClick="coverageClick(20)">.</td>
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">21</td>
             <td id="hour-45-2" class="coverageHour" onClick="coverageClick(45)">.</td>
@@ -217,7 +217,7 @@
             <td id="hour-21-2" class="coverageHour lowPriority" onClick="coverageClick(21)">.</td>
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">22</td>
-            <td id="hour-46-2" class="coverageHour lowPriority" onClick="coverageClick(46)">.</td>
+            <td id="hour-46-2" class="coverageHour" onClick="coverageClick(46)">.</td>
             <td id="hour-70-2" class="coverageHour lowPriority" onClick="coverageClick(70)">.</td>
             <td id="hour-94-2" class="coverageHour lowPriority" onClick="coverageClick(94)">.</td>
             <td id="hour-118-2" class="coverageHour" onClick="coverageClick(118)">.</td>
@@ -226,7 +226,7 @@
             <td id="hour-22-2" class="coverageHour lowPriority" onClick="coverageClick(22)">.</td>
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">23</td>
-            <td id="hour-47-2" class="coverageHour lowPriority" onClick="coverageClick(47)">.</td>
+            <td id="hour-47-2" class="coverageHour" onClick="coverageClick(47)">.</td>
             <td id="hour-71-2" class="coverageHour lowPriority" onClick="coverageClick(71)">.</td>
             <td id="hour-95-2" class="coverageHour lowPriority" onClick="coverageClick(95)">.</td>
             <td id="hour-119-2" class="coverageHour" onClick="coverageClick(119)">.</td>
