--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
@@ -36,7 +36,7 @@
             <td id="hour-27" class="coverageHour lowPriority" onClick="coverageClick(27)">.</td>
             <td id="hour-28" class="coverageHour lowPriority" onClick="coverageClick(28)">.</td>
             <td id="hour-29" class="coverageHour lowPriority" onClick="coverageClick(29)">.</td>
-            <td id="hour-30" class="coverageHour lowPriority" onClick="coverageClick(30)">.</td>
+            <td id="hour-30" class="coverageHour" onClick="coverageClick(30)">.</td>
             <td id="hour-31" class="coverageHour" onClick="coverageClick(31)">.</td>
             <td id="hour-32" class="coverageHour" onClick="coverageClick(32)">.</td>
             <td id="hour-33" class="coverageHour" onClick="coverageClick(33)">.</td>
@@ -53,7 +53,7 @@
             <td id="hour-44" class="coverageHour" onClick="coverageClick(44)">.</td>
             <td id="hour-45" class="coverageHour" onClick="coverageClick(45)">.</td>
             <td id="hour-46" class="coverageHour" onClick="coverageClick(46)">.</td>
-            <td id="hour-47" class="coverageHour lowPriority" onClick="coverageClick(47)">.</td>
+            <td id="hour-47" class="coverageHour" onClick="coverageClick(47)">.</td>
         </tr>
         <tr>
             <td id="tuesday" colspan="3" class="coverageDay dayName"><ex:i18n messageId="coverageBar.html.day.2"/></td>
@@ -63,7 +63,7 @@
             <td id="hour-51" class="coverageHour lowPriority" onClick="coverageClick(51)">.</td>
             <td id="hour-52" class="coverageHour lowPriority" onClick="coverageClick(52)">.</td>
             <td id="hour-53" class="coverageHour lowPriority" onClick="coverageClick(53)">.</td>
-            <td id="hour-54" class="coverageHour lowPriority" onClick="coverageClick(54)">.</td>
+            <td id="hour-54" class="coverageHour" onClick="coverageClick(54)">.</td>
             <td id="hour-55" class="coverageHour" onClick="coverageClick(55)">.</td>
             <td id="hour-56" class="coverageHour" onClick="coverageClick(56)">.</td>
             <td id="hour-57" class="coverageHour" onClick="coverageClick(57)">.</td>
@@ -76,7 +76,7 @@
             <td id="hour-64" class="coverageHour" onClick="coverageClick(64)">.</td>
             <td id="hour-65" class="coverageHour" onClick="coverageClick(65)">.</td>
             <td id="hour-66" class="coverageHour" onClick="coverageClick(66)">.</td>
-            <td id="hour-67" class="coverageHour lowPriority" onClick="coverageClick(67)">.</td>
+            <td id="hour-67" class="coverageHour" onClick="coverageClick(67)">.</td>
             <td id="hour-68" class="coverageHour lowPriority" onClick="coverageClick(68)">.</td>
             <td id="hour-69" class="coverageHour lowPriority" onClick="coverageClick(69)">.</td>
             <td id="hour-70" class="coverageHour lowPriority" onClick="coverageClick(70)">.</td>
@@ -90,7 +90,7 @@
             <td id="hour-75" class="coverageHour lowPriority" onClick="coverageClick(75)">.</td>
             <td id="hour-76" class="coverageHour lowPriority" onClick="coverageClick(76)">.</td>
             <td id="hour-77" class="coverageHour lowPriority" onClick="coverageClick(77)">.</td>
-            <td id="hour-78" class="coverageHour lowPriority" onClick="coverageClick(78)">.</td>
+            <td id="hour-78" class="coverageHour" onClick="coverageClick(78)">.</td>
             <td id="hour-79" class="coverageHour" onClick="coverageClick(79)">.</td>
             <td id="hour-80" class="coverageHour" onClick="coverageClick(80)">.</td>
             <td id="hour-81" class="coverageHour" onClick="coverageClick(81)">.</td>
@@ -103,7 +103,7 @@
             <td id="hour-88" class="coverageHour" onClick="coverageClick(88)">.</td>
             <td id="hour-89" class="coverageHour" onClick="coverageClick(89)">.</td>
             <td id="hour-90" class="coverageHour" onClick="coverageClick(90)">.</td>
-            <td id="hour-91" class="coverageHour lowPriority" onClick="coverageClick(91)">.</td>
+            <td id="hour-91" class="coverageHour" onClick="coverageClick(91)">.</td>
             <td id="hour-92" class="coverageHour lowPriority" onClick="coverageClick(92)">.</td>
             <td id="hour-93" class="coverageHour lowPriority" onClick="coverageClick(93)">.</td>
             <td id="hour-94" class="coverageHour lowPriority" onClick="coverageClick(94)">.</td>
@@ -117,7 +117,7 @@
             <td id="hour-99" class="coverageHour lowPriority" onClick="coverageClick(99)">.</td>
             <td id="hour-100" class="coverageHour lowPriority" onClick="coverageClick(100)">.</td>
             <td id="hour-101" class="coverageHour lowPriority" onClick="coverageClick(101)">.</td>
-            <td id="hour-102" class="coverageHour lowPriority" onClick="coverageClick(102)">.</td>
+            <td id="hour-102" class="coverageHour" onClick="coverageClick(102)">.</td>
             <td id="hour-103" class="coverageHour" onClick="coverageClick(103)">.</td>
             <td id="hour-104" class="coverageHour" onClick="coverageClick(104)">.</td>
             <td id="hour-105" class="coverageHour" onClick="coverageClick(105)">.</td>
@@ -157,7 +157,7 @@
             <td id="hour-136" class="coverageHour" onClick="coverageClick(136)">.</td>
             <td id="hour-137" class="coverageHour" onClick="coverageClick(137)">.</td>
             <td id="hour-138" class="coverageHour" onClick="coverageClick(138)">.</td>
-            <td id="hour-139" class="coverageHour lowPriority" onClick="coverageClick(139)">.</td>
+            <td id="hour-139" class="coverageHour" onClick="coverageClick(139)">.</td>
             <td id="hour-140" class="coverageHour lowPriority" onClick="coverageClick(140)">.</td>
             <td id="hour-141" class="coverageHour lowPriority" onClick="coverageClick(141)">.</td>
             <td id="hour-142" class="coverageHour lowPriority" onClick="coverageClick(142)">.</td>
@@ -171,7 +171,7 @@
             <td id="hour-147" class="coverageHour lowPriority" onClick="coverageClick(147)">.</td>
             <td id="hour-148" class="coverageHour lowPriority" onClick="coverageClick(148)">.</td>
             <td id="hour-149" class="coverageHour lowPriority" onClick="coverageClick(149)">.</td>
-            <td id="hour-150" class="coverageHour lowPriority" onClick="coverageClick(150)">.</td>
+            <td id="hour-150" class="coverageHour" onClick="coverageClick(150)">.</td>
             <td id="hour-151" class="coverageHour" onClick="coverageClick(151)">.</td>
             <td id="hour-152" class="coverageHour" onClick="coverageClick(152)">.</td>
             <td id="hour-153" class="coverageHour" onClick="coverageClick(153)">.</td>
@@ -184,7 +184,7 @@
             <td id="hour-160" class="coverageHour" onClick="coverageClick(160)">.</td>
             <td id="hour-161" class="coverageHour" onClick="coverageClick(161)">.</td>
             <td id="hour-162" class="coverageHour" onClick="coverageClick(162)">.</td>
-            <td id="hour-163" class="coverageHour lowPriority" onClick="coverageClick(163)">.</td>
+            <td id="hour-163" class="coverageHour" onClick="coverageClick(163)">.</td>
             <td id="hour-164" class="coverageHour lowPriority" onClick="coverageClick(164)">.</td>
             <td id="hour-165" class="coverageHour lowPriority" onClick="coverageClick(165)">.</td>
             <td id="hour-166" class="coverageHour lowPriority" onClick="coverageClick(166)">.</td>
@@ -198,7 +198,7 @@
             <td id="hour-3" class="coverageHour lowPriority" onClick="coverageClick(3)">.</td>
             <td id="hour-4" class="coverageHour lowPriority" onClick="coverageClick(4)">.</td>
             <td id="hour-5" class="coverageHour lowPriority" onClick="coverageClick(5)">.</td>
-            <td id="hour-6" class="coverageHour lowPriority" onClick="coverageClick(6)">.</td>
+            <td id="hour-6" class="coverageHour" onClick="coverageClick(6)">.</td>
             <td id="hour-7" class="coverageHour" onClick="coverageClick(7)">.</td>
             <td id="hour-8" class="coverageHour" onClick="coverageClick(8)">.</td>
             <td id="hour-9" class="coverageHour" onClick="coverageClick(9)">.</td>
@@ -212,7 +212,7 @@
             <td id="hour-17" class="coverageHour" onClick="coverageClick(17)">.</td>
             <td id="hour-18" class="coverageHour" onClick="coverageClick(18)">.</td>
             <td id="hour-19" class="coverageHour" onClick="coverageClick(19)">.</td>
-            <td id="hour-20" class="coverageHour lowPriority" onClick="coverageClick(20)">.</td>
+            <td id="hour-20" class="coverageHour" onClick="coverageClick(20)">.</td>
             <td id="hour-21" class="coverageHour lowPriority" onClick="coverageClick(21)">.</td>
             <td id="hour-22" class="coverageHour lowPriority" onClick="coverageClick(22)">.</td>
             <td id="hour-23" class="coverageHour lowPriority" onClick="coverageClick(23)">.</td>
